--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+     <header class="bg-white shadow-md p-4 flex justify-between items-center">
+    <div class="flex">
+      <img class="h-[60px]" src="./assets/logo.png" alt="">
+      <div class="text-xl font-bold text-green-700 px-4">Emergency <br>Service</div>
+    </div>
+    <div class="flex gap-4">
+      <div class="w-18 h-8 py-1 px-4 bg-[#d7efdc] rounded-2xl flex">
+        <span class="font-semibold" id="likeCount">0</span><i class="fa-solid fa-heart text-red-600 mt-1 mx-1"></i></div>
+      <div class="w-18 h-8 py-1 px-3 bg-[#d7efdc] rounded-2xl flex">
+        <span class="font-semibold" id="coinCount">100</span><i class="fa-solid fa-coins text-yellow-500 mt-1 mx-1"></i></div>
+      <button class="bg-green-600 text-white px-3 py-1 rounded-2xl hover:bg-green-700"> <span class="font-semibold" id="copyCount">0</span> copy</button>
+    </div>
+  </header>
     
 </body>
 </html>
